--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Ballads'
 - !lcsh 'Poetry'
+- GITenberg
 tableOfContents: The song of Deirdra -- The diver -- King Byrge and his brothers --
   Turkish hymn to Mahomet.
 title: The Song of Deirdra, King Byrge and his Brothers, and Other Ballads
